adicionando exercício 09 da lista 01

--- a/Aula 08/aula08.qmd
+++ b/Aula 08/aula08.qmd
@@ -39,7 +39,7 @@ rpart.plot(modelo.arvore, extra = 101)
 
 ## Previsão
 
-Comparando o teste com o momdelo, para a classificação
+Comparando o teste com o modelo, para a classificação
 
 ```{r}
 
